S3 Initial Implementation and Profile Image Start
S3 Implementation!
Set up A basic backend endpoint for ProfileImages

Front end now pulls Profile images stored in the bucket:/images/profileImages/<profileI>.jpg
